# fpcpp

./: .gitmodules  CMakeLists.txt  LICENSE  fpcpp.sln
chaos/: chaos.vcxproj  chaos.vcxproj.filters  lib.cpp
chaos/preprocessor/: config.h
chaos/x64/Debug/chaos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
core/: CMakeLists.txt  core.vcxproj  core.vcxproj.filters
core/data/: Changes.h  Concepts.h  Either.h  Enums.h  Functions.h  Future.h  ImmutableArray.h  ImmutableMap.h  NewType.h  Option.h  Record.h  Ref.h  SafePtr.h  Tag.h  Union.h  Unit.h  Variant.h
core/data/collections/: ImmutableArray.h  ImmutableMap.h  ImmutableSet.h  ImmutableVector.h  NonEmpty.h
core/functional/: Functor.h  RefCmp.h
core/macros/: Bitmask.h  ForEach.h  General.h  Group.h  ToSeq.h  Typeclasses.h  Union.h  Withers.h
core/monads/: Either.h  Future.h  Option.h
core/reactive/: Observable.h  RxRef.h  Subject.h  Subscribeable.h  Subscription.h  Tracker.cpp  Tracker.h
core/syntax/: ForComprehension.h  NullCheckChain.h  NullCheckGroup.h  Try.h
core/typeclasses/: DebugStr.h  Default.h  Eq.h  Num.h  Ord.h  Semigroup.h  Str.h  ToString.h
core/x64/Debug/core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
test/: CMakeLists.txt  test.vcxproj
test/data/: TestEither.cpp  TestFuture.cpp  TestImmutableArray.cpp  TestImmutableMap.cpp  TestNewType.cpp  TestNewType.h  TestOption.cpp  TestRecord.cpp  TestRecord.h  TestRecord.i  TestTag.cpp  TestUnion.cpp  TestUnion.h  TestVariant.cpp
test/data/collections/: TestImmutableArray.cpp  TestImmutableMap.cpp  TestImmutableSet.cpp  TestImmutableVector.cpp
test/functional/: TestFunctor.cpp  TestRefCmp.cpp
test/monads/: TestEither.cpp  TestFuture.cpp  TestOption.cpp
test/reactive/: TestObservable.cpp  TestRxRef.cpp  TestSubscription.cpp  TestTracker.cpp
test/syntax/: TestForComprehension.cpp  TestNullCheckChain.cpp  TestNullCheckGroup.cpp  TestTry.cpp
test/typeclasses/: TestDebugStr.cpp  TestDebugStr.h  TestEq.cpp  TestEq.h  TestNum.cpp  TestNum.h  TestOrd.cpp  TestOrd.h  TestSemigroup.cpp  TestSemigroup.h  TestStr.cpp  TestStr.h  TestToString.cpp  TestToString.h
test/x64/Debug/: test.exe.recipe  test.vcxproj.FileListAbsolute.txt
test/x64/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  test.lastbuildstate
x64/Debug/: StaticLibrsssss.idb  StaticLibrsssss.lib  chaos.idb  chaos.lib  core.idb  core.lib
